@@ -1,0 +1,1 @@
+let bug x = A.trigger_bug x
